--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,8 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <style>
-    #building{
-    background:url("../assets/pp3.jpg");
-    width:100%;			
-    height:100%;			
-    position:fixed;
-    background-size:100% 100%;}
   </style>
-  <body>
+ <body background="../src/assets/pp3.jpg">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
