--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>vue-project</title><script defer="defer" src="/js/chunk-vendors.2b7ff3fe.js"></script><script defer="defer" src="/js/app.fe2eb8ab.js"></script><link href="/css/app.baf767b8.css" rel="stylesheet"></head><style>#building{
-    background:url("../assets/pp3.jpg");
-    width:100%;			
-    height:100%;			
-    position:fixed;
-    background-size:100% 100%;}</style><body><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>vue-project</title><script defer="defer" src="/js/chunk-vendors.2b7ff3fe.js"></script><script defer="defer" src="/js/app.fe2eb8ab.js"></script><link href="/css/app.baf767b8.css" rel="stylesheet"></head><style></style><body background="../src/assets/pp3.jpg"><noscript><strong>We're sorry but vue-project doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
