--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             body {
                 width: 100%;
-                height: 100vh;
+                height: 100%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
