Update 可视化 .html

--- a/可视化 .html
+++ b/可视化 .html
@@ -7,7 +7,10 @@
     <frameset rows="10%,90%" border="1">
          <frame src="导航.html">
          <frameset cols="50%,50%" border="1">
-	        <frame src="全国地图.html" name="city">
+		 <frameset rows="50%,50%" border="1">			 
+	                 <frame src="全国地图.html" name="china">
+			 <frame src="blank.html" name="city">
+			 </frameset>
                 <frame src="blank.html" name="chart">
 <!--                 <frame src="table.html" name="table"> -->
          </frameset>
