--- a/全国地图.html
+++ b/全国地图.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style=" margin: 0; padding: 0; width:100% ; height: 100%;"></div>
+    <div id="china" style="width:400px ; height: 400px;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
