--- a/可视化 .html
+++ b/可视化 .html
@@ -11,7 +11,7 @@
 	                 <frame src="全国地图.html" name="china">
 			 <frame src="blank.html" name="city">
 			 </frameset>
-                <frame src="blank.html" name="chart">
+                <frame src="成都词云.html" name="chart">
 <!--                 <frame src="table.html" name="table"> -->
          </frameset>
 </frameset>
