--- a/全国地图.html
+++ b/全国地图.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" content=”no-referrer”  name=”referrer”>
     <title>全国地图</title>
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
 <body >
-    <div id="china" style="width:400px ; height: 400px;"></div>
+    <div id="china" style="width:800px ; height: 800px;"></div>
 
 <script type="text/javascript">
    var myChart = echarts.init(document.getElementById('china'));
