--- a/人流出行.html
+++ b/人流出行.html
@@ -8,8 +8,10 @@
          <frameset cols="*,70%,25%" border="1">
 	        <frame src="name.html"
 name="city">
-                <frame src="chart.html" name="chart">
-                <frame src="table.html" name="table">
+		<frameset rows="50%,50%" border="1">
+	            <frame src="chart.html" name="chart">
+		    <frame src="transportation_timeline.html">
+	        <frame src="table.html" name="table">
          </frameset>
 </frameset>
 </html>           
