--- a/人流出行.html
+++ b/人流出行.html
@@ -11,7 +11,8 @@ name="city">
 		<frameset rows="50%,50%" border="1">
 	            <frame src="chart.html" name="chart">
 		    <frame src="transportation_timeline.html">
-	        <frame src="table.html" name="table">
+		</frameset>
+	            <frame src="table.html" name="table">
          </frameset>
 </frameset>
 </html>           
