--- a/transportation_timeline.html
+++ b/transportation_timeline.html
@@ -6,7 +6,7 @@
                 <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
 
 </head>
-<body >
+<body style="background-color: rgba(240,248,255,0.5)" >
     <div id="cb9fc29bb814482289ffdd50bc1dcd0e" class="chart-container" style="width:700px; height:300px; "></div>
     <script>
         var chart_cb9fc29bb814482289ffdd50bc1dcd0e = echarts.init(
