--- a/全国地图.html
+++ b/全国地图.html
@@ -14,7 +14,7 @@
 
 // 指定图表的配置项和数据
 myChart.showLoading();
-$.get('100000_full.json', function (geoJson) {
+$.get('china.json', function (geoJson) {
 myChart.hideLoading();
 echarts.registerMap('china', geoJson);
 myChart.setOption(
