--- a/transportation_timeline.html
+++ b/transportation_timeline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
                 <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
-
+<style>*{margin:0;padding:0;}</style>
 </head>
 <body style="background-color: rgba(240,248,255,0.5)" >
     <div id="cb9fc29bb814482289ffdd50bc1dcd0e" class="chart-container" style="width:800px; height:400px; "></div>
