--- a/全国地图.html
+++ b/全国地图.html
@@ -41,7 +41,7 @@ visualMap: {
       left:'400px',
       bottom:'200px',
       inRange: {
-      color: ['#7FB3C5', '#7FB3C5', '#7FB3C5']
+      color: ['#BFEFFF', '#BFEFFF', '#BFEFFF']
       }
             },
   series: [
