--- a/全国地图.html
+++ b/全国地图.html
@@ -108,7 +108,7 @@ visualMap: {
                   },
 
                   symbolSize: 10,
-                  color:'#FF4500',
+                  color:'#F7B793',
                   visualMap:false
 
 
