--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 }
             p{
                 position:absolute;
-                top:100px;
-                left:350px;
+                padding-top:100px;
+                padding-left:350px;
                 font-size: 140px;
                 color:black;   
-              font-family:MyFont;
+                font-family:MyFont;
             }
          
             $color-gray: #666;
