--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	   *{
    margin: 0px;
    padding: 0px;
-   box-sizing: border-box;
+/*    box-sizing: border-box; */
    font-family: sans-serif;
 }
 		@font-face {
