--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!doctype html><html><head><meta charset="UTF-8"><title>旅游数据可视化</title>
 	<style>
 	   *{
-   margin: 0px;
-   padding: 0px;
+   margin: 0;
+   padding: 0;
 /*    box-sizing: border-box; */
    font-family: sans-serif;
 }
@@ -12,6 +12,8 @@
          src: url("./fonts/ChillLongCangKaiShu_Regular.0b77245d.otf");
 }
             p{
+		margin: 0;
+                padding: 0;
                 position:absolute;
                 padding-top:1px;
                 padding-left:100px;
