--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 padding: 0;
                 position:absolute;
                 padding-top:1px;
+		padding-bottom:400px;
                 padding-left:100px;
                 font-size: 140px;
                 color:black;   
