--- a/全国地图.html
+++ b/全国地图.html
@@ -41,7 +41,7 @@ visualMap: {
       left:'400px',
       bottom:'200px',
       inRange: {
-      color: ['#BFEFFF', '#BFEFFF', '#BFEFFF']
+      color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
       }
             },
   series: [
