--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 		margin: 0;
                 padding: 0;
                 position:absolute;
-                padding-top:1px;
-		padding-bottom:400px;
+/*                 padding-top:1px; */
                 padding-left:100px;
                 font-size: 140px;
                 color:black;   
