--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 height: 100%;
                 display: flex;
                 justify-content: center;
-                align-items: center;
+/*                 align-items: center; */
                 flex-direction: column;
                 font-family: MyFont;
 		background-image:url(./img/pp3.d3c177e6.jpg);
