--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 width: 100%;
                 height: 100%;
                 display: flex;
-                justify-content: center;
-/*                 align-items: center; */
+/*                 justify-content: center; */
+                align-items: center;
                 flex-direction: column;
                 font-family: MyFont;
 		background-image:url(./img/pp3.d3c177e6.jpg);
