--- a/barc.html
+++ b/barc.html
@@ -48,7 +48,7 @@
                 type: 'bar',
                 data: yearData,
                 itemStyle: {
-                    color: 'green',
+                    color: 'rgba(0,104,139,0.5)',
                     opacity: 0.8
                 }
             }]
