--- a/barx.html
+++ b/barx.html
@@ -51,7 +51,7 @@
                 name: '旅游人次 (单位：万)',
                 data: yearData,
                 itemStyle: {
-                    color: 'green',
+                    color: 'rgba(0,104,139,0.5)',
                     opacity: 0.8
                 }
             }]
