--- a/全国地图.html
+++ b/全国地图.html
@@ -108,7 +108,7 @@ visualMap: {
                   },
 
                   symbolSize: 10,
-                  color:'#F6B895',
+                  color:'#FFA54F'',
                   visualMap:false
 
 
@@ -117,7 +117,7 @@ visualMap: {
 
   tooltip: {
       trigger: 'item',
-      formatter: '{b}<br/>{c}',
+      formatter: '{b}',
 
   },
   toolbox: {
