--- a/全国地图.html
+++ b/全国地图.html
@@ -108,7 +108,7 @@ visualMap: {
                   },
 
                   symbolSize: 10,
-                  color:'#FFA54F'',
+                  color:'#FFA54F',
                   visualMap:false
 
 
