--- a/全国地图.html
+++ b/全国地图.html
@@ -143,9 +143,22 @@ myChart.on('click', function(params) {
             window.parent.city.location.href = '成都地图.html';
             window.parent.chart.location.href = '成都词云.html';
           } 
-        //   else if (name === '散点') {
-        //     window.location.href = '城市地图.html';
-        //   }
+          else if (name === '海南') {
+            window.location.href = '海南地图.html';
+            window.parent.chart.location.href = '海南词云.html';
+          }
+          else if (name === '广州') {
+            window.location.href = '广州地图.html';
+            window.parent.chart.location.href = '广州词云.html';
+          }
+          else if (name === '散厦门') {
+            window.location.href = '厦门地图.html';
+            window.parent.chart.location.href = '厦门词云.html';
+          }
+          else if (name === '西安') {
+            window.location.href = '西安地图.html';
+            window.parent.chart.location.href = '西安词云.html';
+          }
         }
       }
     });
