--- a/广州地图.html
+++ b/广州地图.html
@@ -12,7 +12,7 @@
        var myChart = echarts.init(document.getElementById('guangzhou'));   
     // 指定图表的配置项和数据
     myChart.showLoading();
-    $.get('https://geo.datav.aliyun.com/areas_v3/bound/geojson?code=440100_full', function (geoJson) {
+    $.get('guangzhou.json', function (geoJson) {
     myChart.hideLoading();
     echarts.registerMap('guangzhou', geoJson);
     myChart.setOption(
