--- a/海南地图.html
+++ b/海南地图.html
@@ -12,7 +12,7 @@
        var myChart = echarts.init(document.getElementById('hainan'));   
     // 指定图表的配置项和数据
     myChart.showLoading();
-    $.get('https://geo.datav.aliyun.com/areas_v3/bound/geojson?code=460000_full', function (geoJson) {
+    $.get('hainan.json', function (geoJson) {
     myChart.hideLoading();
     echarts.registerMap('hainan', geoJson);
     myChart.setOption(
