--- a/成都词云.html
+++ b/成都词云.html
@@ -13,7 +13,7 @@
         float: left;
       }
       #info-container {
-        margin-top: 20px;
+        margin-top: 10px;
         display: flex;
         justify-content: center; /* 水平居中 */
         align-items: center; /* 垂直居中 */
@@ -31,7 +31,7 @@
         /* 注意：这里我们直接对 #info-image 应用样式，而不是 #info-image img */
         max-width: 65%; /* 响应式，最大宽度为容器宽度 */
         height: auto; /* 保持图片的原始纵横比 */
-        margin: 0 auto;
+        margin: 0 5px;
       }
     </style>
   </head>
