--- a/成都词云.html
+++ b/成都词云.html
@@ -7,7 +7,7 @@
     <script src="https://raw.gitcode.com/ecomfe/echarts-wordcloud/raw/master/dist/echarts-wordcloud.min.js"></script>
     <title>vocabulary</title>
     <style>
-      #wordcloud {
+      #main {
         width: 50%;
         height: 650px;
         float: left;
