--- a/成都词云.html
+++ b/成都词云.html
@@ -33,6 +33,9 @@
         height: auto; /* 保持图片的原始纵横比 */
         margin: 0 5px;
       }
+      img{
+        max-height: 400px;
+      }
     </style>
   </head>
   <body>
