--- a/成都词云.html
+++ b/成都词云.html
@@ -51,225 +51,181 @@
         {
           name: "吃",
           value: 20,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "火锅",
           value: 18,
           info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          imageUrl: "img/chengdu/huoguo.jpg",
         },
         {
           name: "美食",
           value: 16,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "川剧",
           value: 16,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "川剧，俗称川戏，主要流行于中国西南地区川渝云贵四省市的汉族地区，是融汇高腔、昆曲、胡琴(即皮黄)、弹戏(即梆子)和四川民间灯戏五种声腔艺术而成的传统剧种。",
+          imageUrl: "img/chengdu/chuanju.jpg",
         },
         {
           name: "成都大运会",
           value: 15,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "第31届世界大学生夏季运动会（31st Summer Universiade/31st FISU World University Games），简称成都世界大学生夏季运动会，是中国第四次举办世界大学生运动会，也是中国西部第一次举办世界性综合运动会。",
+          imageUrl: "img/chengdu/dayunhui.jpeg",
         },
         {
           name: "花花",
           value: 14,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "和花，又叫“成和花”， [34]雌性大熊猫，谱系号1237，2020年7月4日与双胞胎妹妹和叶出生于成都大熊猫繁育研究基地月亮产房，出生体重200g，为辨识度和颜值都很高的一只熊猫。母亲为“洁癖公主”成功，父亲是海归大熊猫美兰。",
+          imageUrl: "img/chengdu/huahua.webp",
         },
         {
           name: "2万亿",
           value: 14,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "春熙路",
           value: 12,
           info: "春熙路是位于中国成都市的一条著名商业街道，是成都最繁华的商业中心之一。 它位于锦江区的中心位置，东临成都市总府街，西接红星路，全长约1公里。 春熙路是成都市金融中心和购物天堂，吸引着国内外游客和购物爱好者。",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2021%2F0505%2Ff165a39ej00qsmt0a0058c000jz00dcg.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
+          imageUrl: "img/chengdu/chunxilu.jpg",
         },
         {
           name: "轻松",
           value: 11,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "科幻",
           value: 11,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "喝茶",
           value: 11,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "安逸",
           value: 10,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "打麻将",
           value: 9,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "四川麻将又称血战麻将，采用四川地区流行的麻将打法 [2-3]。核心是打缺门，刮风下雨，计番，流局查叫。一局牌中，一家胡牌并不结束牌局，而是未胡的玩家继续打，直到3家胡牌或剩余的玩家流局。牌局结束一并结算。",
+          imageUrl: "img/chengdu/majiang.jpg",
         },
         {
           name: "酒",
           value: 6,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "夜生活",
           value: 6,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "串串",
           value: 9,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "串串是用签子把新鲜食物串起来，再放进有秘制汤料的锅里煮的一种特色小吃。串串的种类很多，从各种口味的特色牛肉到品种丰富的素菜，当然也还少不了四川人爱吃的毛肚鸭肠郡肝黄喉这些经典菜系了。川渝美食以辣和麻见长，闻名中国，锅底的用料决定了串串的味道，因此每一家串串都有自己的独特配方。",
+          imageUrl: "img/chengdu/chuanju.jpg",
         },
         {
           name: "演唱会",
           value: 9,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "成都有非常多的演唱会演出。",
+          imageUrl: "img/chengdu/yanchanghui.jpg",
         },
         {
           name: "自由",
           value: 8,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "IFS",
           value: 8,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "成都国际金融中心，简称“成都IFS”，位于四川省成都市锦江区红星路和大慈寺路的交汇处，是集购物、文化娱乐、写字楼、酒店式公寓、酒店于一体的城市综合体。",
+          imageUrl: "img/chengdu/IFS.jpg",
         },
         {
           name: "甜水面",
           value: 8,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "甜水面是我国最特殊的面条之一，外形足足有筷子那么粗，因为加入了复制酱油，入口微甜，故得名“甜水面”。调味时除了加入复制酱油，还加入了花生碎、花椒粉、红油辣椒；此外，还要调入蒜泥、芝麻酱等调味料，面条吃起来筋道爽口。",
+          imageUrl: "img/chengdu/tianshuimian.webp",
         },
         {
           name: "武侯祠",
           value: 8,
           info: "成都武侯祠是纪念刘备、诸葛亮等蜀汉英雄人物庙宇所在。 它肇始于蜀汉昭烈帝章武元年（221年）刘备惠陵修建时，在修建惠陵的同时也修建了汉昭烈庙。",
-          imageUrl:
-            "https://n.sinaimg.cn/spider20230327/238/w598h440/20230327/9833-6e490d30bc2d47b3f1a8bcaf27dfc4c7.png",
+          imageUrl: "img/chengdu/wuhouci.png",
         },
         {
           name: "宽窄巷子",
           value: 9,
           info: "宽窄巷子位于四川省成都市青羊区长顺街附近，由宽巷子、窄巷子、井巷子平行排列组成，全为青黛砖瓦的仿古四合院落，这里也是成都遗留下来的较成规模的清朝古街道，是国家AA级旅游景区， 与 大慈寺 、 文殊院 一起并称为成都三大历史文化名城保护街区 。",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2021%2F0505%2F2cbbbd0aj00qsmt090017c000hs00b8g.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
+          imageUrl: "img/chengdu/kuanzhaixiangzi.jpg",
         },
         {
           name: "东郊记忆",
           value: 11,
           info: "东郊记忆，原成都东区音乐公园，是集合音乐、美术、戏剧、摄影等文化形态的多元文化园区，工业遗址主题旅游地，艺术文化展演聚落，文艺创作交流园区，成都文化创意产业高地。",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0202%2F3d2f37c5j00s87zqh014td200u000jzg00gx00b9.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
+          imageUrl: "img/chengdu/dongjiaojiyi.jpg",
         },
         {
           name: "文殊院",
           value: 8,
           info: "文殊院是成都市内保存最为完整的佛教寺庙，坐北朝南，建筑为典型川西平原古建风格，主要为木构建筑。 殿宇六重，进山门往里走依次是天王殿、三大士殿、大雄宝殿、说法堂、藏经楼。 与东西两侧的钟楼、斋堂、廊房等建筑浑然一体，为典型的清代建筑。",
-          imageUrl:
-            "https://www.fcgjlx.com/ueditor/php/upload/image/20200716/1594879851175095.jpeg",
+          imageUrl: "img/chengdu/wenshuyuan.jpeg",
         },
         {
           name: "担担面",
           value: 8,
           info: "担担面是四川省的一道传统小吃，属于川菜系。该菜品起源于自贡市，由面粉、红辣椒油、芝麻酱、葱花等材料制作而成。",
-          imageUrl:
-            "https://imagepphcloud.thepaper.cn/pph/image/189/540/102.png",
+          imageUrl: "img/chengdu/dandanmian.png",
         },
         {
           name: "玉林",
           value: 8,
           info: "玉林街道，隶属四川省成都市武侯区，地处武侯区中部，东与跳伞塔街道相连，南接火车南站街道，西与浆洗街、高新区的芳草街街道接壤，北临锦江河。总面积2.7平方千米。 ",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0430%2F84b17e9fj00scrbiz009xd0014000u0g.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
+          imageUrl: "img/chengdu/yulin.jpg",
         },
         {
           name: "锦里",
           value: 10,
           info: "锦里，位于四川省成都市，截至2017年占地30000余平方米，建筑面积14000余平方米，街道全长550米，是成都武侯祠博物馆的一部分，也是以明末清初川西民居作外衣、三国文化与成都民俗作内涵，集旅游购物、休闲娱乐为一体且具有商业气息的街道。",
-          imageUrl: "https://pic.quanjing.com/t5/dz/QJ6459661079.jpg@!794wsy",
+          imageUrl: "img/chengdu/jinli.jpg",
         },
         {
           name: "盖碗茶",
           value: 7,
           info: "盖碗茶，四川等地回族人民传统的饮茶风俗。 是一种上有盖、下有托，中有碗的茶具。又称三才碗，盖为天、托为地、碗为人。品盖碗茶，韵味无穷。茶盖放在碗内，若要茶汤浓些，可用茶盖在水面轻轻刮一刮，使整碗茶水上下翻转，轻刮则淡，重刮则浓，是其妙也。",
-          imageUrl:
-            "https://pic.quanjing.com/d8/ux/QJ6331241510.jpg?x-oss-process=style/show_794s",
+          imageUrl: "img/chengdu/gaiwancha.webp",
         },
         {
           name: "热情",
           value: 8,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "成都",
           value: 18,
           info: "成都市，简称“蓉”，别称蓉城、锦城，四川省辖地级市，是四川省省会、副省级市、超大城市、国家中心城市，地处中国西南地区、四川盆地西部、成都平原腹地，是国务院批复确定的国家重要的高新技术产业基地、商贸物流中心和综合交通枢纽、西部地区重要的中心城市。",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2023%2F0224%2F15af2218j00rql1b7001lc000hs00bug.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
         },
         {
           name: "烟火",
           value: 7,
-          info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl:
-            "https://k.sinaimg.cn/n/sinakd20240319s/266/w640h426/20240319/cc3c-gif5a7cc25a534299ed82c4bb9ad058c7c6.gif/w700d1q75cms.jpg",
+          info: "",
         },
         {
           name: "大熊猫",
           value: 11,
           info: "大熊猫属于熊科、大熊猫属哺乳动物，是中国特有种。大熊猫仅有两个亚种，四川亚种和秦岭亚种，主要栖息地是中国四川、陕西和甘肃的山区。",
-          imageUrl:
-            "https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2024%2F0317%2Fa17a774cj00sah08n0015d200k000dcg00it00cj.jpg&thumbnail=660x2147483647&quality=80&type=jpg",
+          imageUrl: "img/chengdu/daxiongmao.jpg",
         }
       );
       // 小鸟的base64编码
@@ -338,11 +294,17 @@
         if (selectedItem) {
           // 显示选中的词语对应的额外信息
           infoTextElement.innerHTML = selectedItem.info;
-          // 显示图片
-          var imgElement = document.createElement("img");
-          imgElement.src = selectedItem.imageUrl;
-          imgElement.alt = selectedItem.name;
-          infoImageElement.appendChild(imgElement);
+          if (selectedItem.imageUrl) {
+            // 显示图片
+            var imgElement = document.createElement("img");
+            imgElement.src = selectedItem.imageUrl;
+            imgElement.alt = selectedItem.name;
+            infoImageElement.appendChild(imgElement);
+            imgElement.style.width = "650px";
+            imgElement.style.height = "400px";
+          } else {
+            infoImageElement.innerHTML = "";
+          }
         } else {
           // 如果没有找到对应项，可以清空或显示默认信息
           infoTextElement.innerHTML = "未找到相关信息";
