--- a/成都词云.html
+++ b/成都词云.html
@@ -57,7 +57,7 @@
           name: "火锅",
           value: 18,
           info: "是中国传统美食之一，古称“古董羹”，因食物投入沸水时发出的“咕咚”声而得名。 火锅起源于中国，其特色是边煮边吃的烹饪、用餐方式。",
-          imageUrl: "../img/chengdu/huoguo.jpg",
+          imageUrl: "img/chengdu/huoguo.jpg",
         },
         {
           name: "美食",
