--- a/成都词云.html
+++ b/成都词云.html
@@ -133,7 +133,7 @@
           name: "串串",
           value: 9,
           info: "串串是用签子把新鲜食物串起来，再放进有秘制汤料的锅里煮的一种特色小吃。串串的种类很多，从各种口味的特色牛肉到品种丰富的素菜，当然也还少不了四川人爱吃的毛肚鸭肠郡肝黄喉这些经典菜系了。川渝美食以辣和麻见长，闻名中国，锅底的用料决定了串串的味道，因此每一家串串都有自己的独特配方。",
-          imageUrl: "img/chengdu/chuanju.jpg",
+          imageUrl: "img/chengdu/chuanchan.jpg",
         },
         {
           name: "演唱会",
