--- a/成都地图.html
+++ b/成都地图.html
@@ -27,11 +27,11 @@
                      map: 'chengdu',
                      selectedMode: 'multiple',
                     },
-    visualMap: {
+   visualMap: {
         seriesIndex: 0,
           show:false,
-          min: 0,
-          max: 8,
+          min: 1,
+          max: 3,
           // text: ['High', 'Low'],
           // realtime: true,
           // calculable: true,
@@ -39,7 +39,7 @@
           // left:'100px',
           // bottom:'100px',
           inRange: {
-          color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+          color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
           }
                 },
       series: [
@@ -52,25 +52,25 @@
           },
           data: [
           { name: '锦江区', value: 1 },
-              { name: '青羊区', value: 5 },
+              { name: '青羊区', value: 2 },
               { name: '金牛区', value: 2 },
-              { name: '武侯区', value: 4 },
+              { name: '武侯区', value: 1 },
               { name: '成华区', value: 3 },
-              { name: '龙泉驿区', value: 6 },
+              { name: '龙泉驿区', value: 2 },
               { name: '青白江区', value: 1 },
-              { name: '新都区', value: 5 },
-              { name: '温江区', value: 5 },
-              { name: '双流区', value: 5 },
-              { name: '郫都区', value: 8 },
+              { name: '新都区', value: 3 },
+              { name: '温江区', value: 2 },
+              { name: '双流区', value: 3 },
+              { name: '郫都区', value: 1 },
               { name: '新津区', value: 3 },
               { name: '简阳市', value: 2 },
-              { name: '都江堰市', value: 4 },
-              { name: '彭州市', value: 4 },
-              { name: '邛崃市', value: 7 },
-              { name: '崇州市', value: 6 },
-              { name: '金堂县', value: 6 },
-              { name: '大邑县', value: 6 },
-              { name: '蒲江县', value: 5 },
+              { name: '都江堰市', value: 2 },
+              { name: '彭州市', value: 3 },
+              { name: '邛崃市', value: 3 },
+              { name: '崇州市', value: 2 },
+              { name: '金堂县', value: 3 },
+              { name: '大邑县', value: 1 },
+              { name: '蒲江县', value: 3 },
 
           ],   
           },
