--- a/全国地图.html
+++ b/全国地图.html
@@ -32,8 +32,8 @@ myChart.setOption(
 visualMap: {
     seriesIndex: 0,
     show:false,
-      min: 0,
-      max: 8,
+      min: 1,
+      max: 3,
       text: ['High', 'Low'],
       realtime: true,
       calculable: true,
@@ -41,7 +41,7 @@ visualMap: {
       left:'400px',
       bottom:'200px',
       inRange: {
-      color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+      color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
       }
             },
   series: [
@@ -54,39 +54,39 @@ visualMap: {
       },
       data: [
           { name: '河北省', value: 1 },
-          { name: '山西省', value: 5 },
+          { name: '山西省', value: 2 },
           { name: '辽宁省', value: 2 },
-          { name: '吉林省', value: 4 },
+          { name: '吉林省', value: 3 },
           { name: '黑龙江省', value: 3 },
-          { name: '江苏省', value: 6 },
+          { name: '江苏省', value: 2 },
           { name: '浙江省', value: 1 },
-          { name: '安徽省', value: 5 },
-          { name: '福建省', value: 5 },
-          { name: '江西省', value: 5 },
-          { name: '山东省', value: 8 },
+          { name: '安徽省', value: 1 },
+          { name: '福建省', value: 2 },
+          { name: '江西省', value: 2 },
+          { name: '山东省', value: 3 },
           { name: '河南省', value: 3 },
           { name: '湖北省', value: 2 },
-          { name: '湖南省', value: 4 },
-          { name: '广东省', value: 4 },
-          { name: '四川省', value: 7 },
-          { name: '贵州省', value: 6 },
-          { name: '云南省', value: 6 },
-          { name: '陕西省', value: 6 },
-          { name: '甘肃省', value: 4 },
+          { name: '湖南省', value: 1 },
+          { name: '广东省', value: 1 },
+          { name: '四川省', value: 1 },
+          { name: '贵州省', value: 2 },
+          { name: '云南省', value: 2 },
+          { name: '陕西省', value: 1 },
+          { name: '甘肃省', value: 3 },
           { name: '青海省', value: 2 },
-          { name: '台湾省', value: 5 },
-          { name: '海南省', value: 6 },
+          { name: '台湾省', value: 2 },
+          { name: '海南省', value: 3 },
           { name: '新疆维吾尔自治区', value: 2 },
           { name: '西藏自治区', value: 1 },
-          { name: '广西壮族自治区', value: 4 },
+          { name: '广西壮族自治区', value: 2 },
           { name: '宁夏回族自治区', value: 3 },
           { name: '内蒙古自治区', value: 2 },
-          { name: '重庆市', value: 6 },
-          { name: '北京市', value: 7 },
-          { name: '天津市', value: 5 },
-          { name: '香港特别行政区', value: 4 },
+          { name: '重庆市', value: 1 },
+          { name: '北京市', value: 1 },
+          { name: '天津市', value: 2 },
+          { name: '香港特别行政区', value: 3 },
           { name: '澳门特别行政区', value: 2 },
-          { name: '上海市', value: 6 },
+          { name: '上海市', value: 1 },
           { name: '南海诸岛', value: 2 },   
       ],   
       },
