--- a/厦门地图.html
+++ b/厦门地图.html
@@ -30,8 +30,8 @@
     visualMap: {
         seriesIndex: 0,
           show:false,
-          min: 0,
-          max: 8,
+          min: 1,
+          max: 3,
           // text: ['High', 'Low'],
           // realtime: true,
           // calculable: true,
@@ -39,7 +39,7 @@
           // left:'100px',
           // bottom:'100px',
           inRange: {
-          color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+          color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
           }
                 },
       series: [
@@ -52,11 +52,11 @@
           },
           data: [
               { name: '翔安区', value: 1 },
-              { name: '同安区', value: 5 },
+              { name: '同安区', value: 2 },
               { name: '集美区', value: 2 },
-              { name: '海沧区', value: 4 },
+              { name: '海沧区', value: 1 },
               { name: '思明区', value: 3 },
-              { name: '湖里区', value: 6 },
+              { name: '湖里区', value: 3 },
 
           ],   
           },
