--- a/广州地图.html
+++ b/广州地图.html
@@ -30,8 +30,8 @@
     visualMap: {
         seriesIndex: 0,
           show:false,
-          min: 0,
-          max: 8,
+          min: 1,
+          max: 3,
           // text: ['High', 'Low'],
           // realtime: true,
           // calculable: true,
@@ -39,7 +39,7 @@
           // left:'100px',
           // bottom:'100px',
           inRange: {
-          color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+          color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
           }
                 },
       series: [
@@ -52,16 +52,16 @@
           },
           data: [
               { name: '越秀区', value: 1 },
-              { name: '荔湾区', value: 5 },
+              { name: '荔湾区', value: 2 },
               { name: '海珠区', value: 2 },
-              { name: '天河区', value: 4 },
+              { name: '天河区', value: 1 },
               { name: '白云区', value: 3 },
-              { name: '黄埔区', value: 6 },
+              { name: '黄埔区', value: 2 },
               { name: '番禺区', value: 1 },
-              { name: '花都区', value: 5 },
-              { name: '南沙区', value: 5 },
-              { name: '增城区', value: 5 },
-              { name: '从化区', value: 8 },
+              { name: '花都区', value: 3 },
+              { name: '南沙区', value: 3 },
+              { name: '增城区', value: 2 },
+              { name: '从化区', value: 1 },
 
           ],   
           },
