--- a/海南地图.html
+++ b/海南地图.html
@@ -30,8 +30,8 @@
     visualMap: {
         seriesIndex: 0,
           show:false,
-          min: 0,
-          max: 8,
+          min: 1,
+          max: 3,
           // text: ['High', 'Low'],
           // realtime: true,
           // calculable: true,
@@ -39,7 +39,7 @@
           // left:'100px',
           // bottom:'100px',
           inRange: {
-          color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+          color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
           }
                 },
       series: [
@@ -52,23 +52,23 @@
           },
           data: [
               { name: '海口市', value: 1 },
-              { name: '三亚市', value: 5 },
+              { name: '三亚市', value: 2 },
               { name: '三沙市', value: 2 },
-              { name: '儋州市', value: 4 },
+              { name: '儋州市', value: 1 },
               { name: '五指山市', value: 3 },
-              { name: '文昌市', value: 6 },
+              { name: '文昌市', value: 2 },
               { name: '琼海市', value: 1 },
-              { name: '万宁市', value: 5 },
-              { name: '东方市', value: 5 },
-              { name: '定安县', value: 5 },
-              { name: '屯昌县', value: 8 },
+              { name: '万宁市', value: 3 },
+              { name: '东方市', value: 3 },
+              { name: '定安县', value: 2 },
+              { name: '屯昌县', value: 3 },
               { name: '澄迈县', value: 3 },
               { name: '临高县', value: 2 },
               { name: '白沙黎族自治县', value: 1 },
-              { name: '昌江黎族自治县', value: 1 },
-              { name: '乐东黎族自治县', value: 1 },
+              { name: '昌江黎族自治县', value: 3 },
+              { name: '乐东黎族自治县', value: 2 },
               { name: '陵水黎族自治县', value: 1 },
-              { name: '保亭黎族苗族自治县', value: 1 },
+              { name: '保亭黎族苗族自治县', value: 3 },
               { name: '琼中黎族苗族自治县', value: 1 },
 
           ],   
