--- a/西安地图.html
+++ b/西安地图.html
@@ -30,8 +30,8 @@
     visualMap: {
         seriesIndex: 0,
           show:false,
-          min: 0,
-          max: 8,
+          min: 1,
+          max: 3,
           // text: ['High', 'Low'],
           // realtime: true,
           // calculable: true,
@@ -39,7 +39,7 @@
           // left:'100px',
           // bottom:'100px',
           inRange: {
-          color: ['#BFEFFF80', '#BFEFFF80', '#BFEFFF80']
+          color: ['#FCDB93', '#F8D8D6', '#D2FCFD']
           }
                 },
       series: [
@@ -52,16 +52,16 @@
           },
           data: [
           { name: '未央区', value: 1 },
-              { name: '新城区', value: 5 },
+              { name: '新城区', value: 2 },
               { name: '碑林区', value: 2 },
-              { name: '莲湖区', value: 4 },
+              { name: '莲湖区', value: 1 },
               { name: '灞桥区', value: 3 },
-              { name: '雁塔区', value: 6 },
+              { name: '雁塔区', value: 3 },
               { name: '阎良区', value: 1 },
-              { name: '临潼区', value: 5 },
-              { name: '长安区', value: 5 },
-              { name: '高陵区', value: 5 },
-              { name: '鄠邑区', value: 8 },
+              { name: '临潼区', value: 2 },
+              { name: '长安区', value: 2 },
+              { name: '高陵区', value: 1 },
+              { name: '鄠邑区', value: 2 },
               { name: '蓝田县', value: 3 },
               { name: '周至县', value: 2 },
 
