--- a/成都地图.html
+++ b/成都地图.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.5.0/dist/echarts.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 </head>
-<body >
+<body  style="background-color: rgba(240,248,255,0.5)">
     <div id="chengdu" style="width: 700px;height:700px;margin:0"></div>
     <script type="text/javascript">
        var myChart = echarts.init(document.getElementById('chengdu'));   
