--- a/厦门地图.html
+++ b/厦门地图.html
@@ -98,7 +98,7 @@
       toolbox: {
           show: true,
           orient: 'vertical',
-          left: 'right',
+          left: 'bottom',
           top: 'center',
           feature: {
           dataView: { readOnly: false },
