--- a/厦门地图.html
+++ b/厦门地图.html
@@ -89,7 +89,7 @@
     
       tooltip: {
           trigger: 'item',
-          position: 'right',
+          position: 'bottom',
           formatter:  function(params) {
         return params.data.tooltipContent; // 根据数据点的tooltipContent属性返回悬浮框内容
     },
