--- a/成都地图.html
+++ b/成都地图.html
@@ -79,11 +79,11 @@
                       type: 'effectScatter',
                       coordinateSystem: 'geo',
                       data: [
-                        {name: '熙蜀酒店', value:[104.01624984405964,30.683974291364954], tooltipContent: '熙蜀酒店位于市中心，配备空调客房、花园、免费WiFi和共用休息室。这家住宿配有客房服务，还为客人提供餐厅和露台。住宿为客人提供24小时前台、礼宾服务和外币兑换服务。<br/>评分：9.7<br/>地址：青羊区酱园公所街9号附2号（文殊坊）'},
+                        {name: '熙蜀酒店', value:[104.01624984405964,30.683974291364954], tooltipContent: '熙蜀酒店位于市中心，配备空调客房、花园、免费WiFi和共用休息室。这家住宿配有客房服务，还为<br/>客人提供餐厅和露台。住宿为客人提供24小时前台、礼宾服务和外币兑换服务。<br/>评分：9.7<br/>地址：青羊区酱园公所街9号附2号（文殊坊）'},
                         {name: '成都郫都智选假日酒店', value:[103.90855187521493,30.790099619297713], tooltipContent: '成都郫都智选假日酒店位于郫都主城区文化核心圈，地理位置优越，周边生活设施完善，交通便捷<br/>评分：9.5<br/>地址：郫都区蜀信路一段1007号'},
-                        {name: '成都新都假日酒店', value:[104.15043123527028,30.825635599240986], tooltipContent: '成都新都假日酒店位于成都市新都区，距离国际购物中心仅几步之遥。酒店设有spa中心、室内游泳池和设备齐全且带免费网络连接的客房。<br/>评分：8.9<br/>地址：新都区马超东路280号'},
-                        {name: '都江堰古城智选假日酒店', value:[103.66168065858426,30.975571628045508], tooltipContent: '都江堰古城智选假日酒店距离都江堰风景区有10分钟步行路程，设有1间餐厅和免费无线网络连接。每间客房均设有卫星电视、空调、电烧水壶以及带淋浴、吹风机和免费洗浴用品的私人浴室<br/>评分：8.4<br/>地址：都江堰建设路202号 '},
-                        {name: '成都温江皇冠假日酒店', value:[103.89759949411143,30.683237540995684], tooltipContent: '成都温江皇冠假日酒店位于温江，距离凤凰街地铁站（4号线）有15分钟步行路程，提供2间内部餐厅以及覆盖各处的免费WiFi。<br/>评分：9.5<br/>地址：温江区凤凰北大街619号 '},
+                        {name: '成都新都假日酒店', value:[104.15043123527028,30.825635599240986], tooltipContent: '成都新都假日酒店位于成都市新都区，距离国际购物中心仅几步之遥。酒店设有<br/>spa中心、室内游泳池和设备齐全且带免费网络连接的客房。<br/>评分：8.9<br/>地址：新都区马超东路280号'},
+                        {name: '都江堰古城智选假日酒店', value:[103.66168065858426,30.975571628045508], tooltipContent: '都江堰古城智选假日酒店距离都江堰风景区有10分钟步行路程，设有1间餐厅和免费无线网络连接。每间客房均设有<br/>卫星电视、空调、电烧水壶以及带淋浴、吹风机和免费洗浴用品的私人浴室<br/>评分：8.4<br/>地址：都江堰建设路202号 '},
+                        {name: '成都温江皇冠假日酒店', value:[103.89759949411143,30.683237540995684], tooltipContent: '成都温江皇冠假日酒店位于温江，距离凤凰街地铁站（4号线）有15分钟步行<br/>路程，提供2间内部餐厅以及覆盖各处的免费WiFi。<br/>评分：9.5<br/>地址：温江区凤凰北大街619号 '},
                         {name: '成都天府皇冠假日酒店', value:[104.05498094296092,30.54726608247831], tooltipContent: '成都天府皇冠假日酒店位置优越。房间设施配备齐全，环境良好，交通便捷<br/>评分：9.1<br/>地址：天府新区剑南大道南段669号'},
 
                         ],
